--- a/frontend/css/feedback.css
+++ b/frontend/css/feedback.css
@@ -1,9 +1,8 @@
 input,
 textarea {
   padding: 0.9375rem 1.25rem;
-  border-radius: 0.625rem;
-  box-shadow: 0rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);
-  border: none;
+  border-radius: 0.3125rem;
+  border: solid 1px #ccc;
   margin-top: 0.9375rem;
   width: 100%;
   box-sizing: border-box;
@@ -20,13 +19,29 @@ textarea {
   background-image: url("../assets//screens/menu/bg.gif");
 }
 
+.form-container {
+  background-color: white;
+  box-sizing: border-box;
+  padding: 20px;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-container h1 {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: gray;
+  margin-bottom: 20px;
+  display: flex;
+}
+
 textarea {
   resize: none;
-  width: 100%;
 }
 
 form {
-  width: 30vw;
   display: flex;
   flex-direction: column;
 }
@@ -34,8 +49,78 @@ form {
 button {
   padding: 0.9375rem 1.25rem;
   border-radius: 0.625rem;
-  box-shadow: 0rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);
   border: none;
   margin-top: 0.9375rem;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ccc;
+  transition: all 0.5s;
+}
+
+.star-rating {
   width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 4.375rem;
+  justify-content: center;
+  padding: 0 0.2em;
+  text-align: center;
+  width: 5em;
+}
+
+.star-rating input {
+  display: none;
+}
+
+.star-rating label {
+  color: #ccc;
+  cursor: pointer;
+}
+
+.star-rating :checked ~ label {
+  color: #f90;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+  color: #fc0;
+}
+
+@media only screen and (max-width: 1100px) {
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .star-rating {
+    display: flex;
+    flex-direction: row-reverse;
+    font-size: 60px;
+    justify-content: center;
+    padding: 0 0.2em;
+    text-align: center;
+    width: 5em;
+  }
+
+  .form-container {
+    background-color: white;
+    box-sizing: border-box;
+    padding: 20px;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  textarea {
+    align-self: center;
+    width: 90%;
+  }
+
+  button {
+    align-self: center;
+    width: 90%;
+  }
 }
